# slag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
slag/: __init__.py
tests/: test_main.py
