[project]
name = "slag-commenting"
version = "1.1.1"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.13",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "python-ulid[pydantic]>=3.0.0",
    "pydantic-settings>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "isort>=5.12.0",
    "httpx>=0.26.0", # Added for TestClient
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
